Updated profile icon

--- a/styles/page.css
+++ b/styles/page.css
@@ -13,7 +13,7 @@ Base style used in the website
     --main-color: #272825;
     --main-color-light: #073765;    /*Used for hover*/
     --main-color-dark: #00284d;     /*Used for inactive elements*/
-    --accent-color: #BA372E;
+    --accent-color: #cc3c33;
     --accent-color-light: #0e62b6;  /*Used for hover*/
     --accent-color-dark: #014993;   /*Used for inactive elements*/
     --secondary-color: #333430;
