Added work list in the Works page
Added files to support the work list as includes, layout and folder index.
Removed old index file for the folder.
Edited the _layout.scss stylesheet to style the new contents.
Added a test file for the works folder.

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -278,3 +278,48 @@
     }
   }
 }
+
+/**
+ * Works
+ */
+.work-header {
+  margin-bottom: $spacing-unit;
+}
+
+.work-title {
+  @include relative-font-size(2.625);
+  letter-spacing: -1px;
+  line-height: 1;
+
+  @include media-query($on-laptop) {
+    @include relative-font-size(2.25);
+  }
+}
+
+.work-content {
+  margin-bottom: $spacing-unit;
+
+  h2 {
+    @include relative-font-size(2);
+
+    @include media-query($on-laptop) {
+      @include relative-font-size(1.75);
+    }
+  }
+
+  h3 {
+    @include relative-font-size(1.625);
+
+    @include media-query($on-laptop) {
+      @include relative-font-size(1.375);
+    }
+  }
+
+  h4 {
+    @include relative-font-size(1.25);
+
+    @include media-query($on-laptop) {
+      @include relative-font-size(1.125);
+    }
+  }
+}
