Edited post list implementation
Moved the post list from the page layout to a posts.html import called inside the blog.md page.

Minor changes to Works page style.

--- a/_includes/works.html
+++ b/_includes/works.html
@@ -1,10 +1,10 @@
 <section>
   <div class="work-container">
-    <ul class= "post-list">
+    <ul class= "work-list">
       {% assign work_pages = site.pages | where_exp: "page", "page.path contains 'works/'" %}
       {% for work in work_pages %}
         <li>
-          <h3><a class="post-link" href="{{ work.url }}">{{ work.title }}</a></h3>
+          <h3><a class="work-link" href="{{ work.url }}">{{ work.title }}</a></h3>
           <p>{{ work.description }}</p>
         </li>
       {% endfor %}
