--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -232,6 +232,29 @@
   @include relative-font-size(1.5);
 }
 
+.work-list-heading {
+  @include relative-font-size(1.75);
+}
+
+.work-list {
+  margin-left: 0;
+  list-style: none;
+
+  > li {
+    margin-bottom: $spacing-unit;
+  }
+}
+
+.work-meta {
+  font-size: $small-font-size;
+  color: $grey-color;
+}
+
+.work-link {
+  display: block;
+  @include relative-font-size(1.5);
+}
+
 
 
 /**
