--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="wrap">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+    <a class="site-title pixel-title" rel="author" href="{{ "/" | relative_url }}">
       <img
         src="{{ '/assets/images/profile-icon.svg' | relative_url }}"
         height="42"
