--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -24,9 +24,15 @@
   margin-right: $spacing-unit;
 }
 
+.pixel-title {
+  font-family: "Silkscreen", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .site-title {
   @include relative-font-size(1.625);
-  font-weight: 300;
+  font-weight: 400;
   line-height: $base-line-height * $base-font-size * 2.25;
   letter-spacing: -1px;
   margin-bottom: 0;
