--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,9 @@
         {{ content }}
       </div>
     </main>
-
-    {%- include footer.html -%}
+    {% if page.title != "About" and page.layout != "home" %}
+      {%- include footer.html -%}
+    {% endif %}
 
   </body>
 
