Added homepage content Added a first version of the homepage with a bento box layout for main personal info. Added new images for the homepage. Edited the style in bento.scss and base.scss. Updated the content of default.html and home.html together with the index.markdown.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,14 @@
     {%- include header.html -%}
 
     <main class="page-content" aria-label="Content">
+      {% if page.layout != "home" %}
       <div class="wrapper">
-        {{ content }}
+      {% else %}
+      <div class="bento-container">
+      {% endif %}
+
+      {{ content }}
+
       </div>
     </main>
     {% if page.title != "About" and page.layout != "home" %}
