--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,12 +2,10 @@
 layout: default
 ---
 
-<div class="home">
-  {%- if page.title -%}
+{%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
+  {%- include home-bento.html -%}
+
   {{ content }}
-
-
-</div>
