Added support for homepage links Edited home-bento.html to support cards links. Minor syle changes to support links in bento.scss and minima.scss.

--- a/_includes/home-bento.html
+++ b/_includes/home-bento.html
@@ -2,9 +2,9 @@
     <div class="bento-card xl main">
         <img src="assets/images/profile-icon.png" alt="Profile image">
         <div>
-            <h2>Antonio Marcone</h2>
+            <h1>Antonio Marcone</h1>
             <p><span class="title">@amarcone42</span></p>
-            <p>Developer, creative, student.</p>
+            <p>Developer, creative, student</p>
         </div>
     </div>
     
@@ -14,44 +14,44 @@
     </div>
 
 
-    <div class="bento-card m">
+    <a class="bento-card m" href="/jekyll/update/2024/07/01/welcome-to-jekyll.html">
         <div>
-            <h3>Why you should not use WhatsApp</h3>
+            <h3>Welcome to Jekyll!</h3>
             <p>Read more...</p>
         </div>
-    </div>
+    </a>
 
-    <div class="bento-card m">
+    <a class="bento-card m" href="/testing/2024/07/11/lorem-ipsum.html">
         <div>
-            <h3>The simple yet powerful math we don't talk about</h3>
+            <h3>Lorem Ipsum</h3>
             <p>Read more...</p>
         </div>
-    </div>
+    </a>
 
-    <div class="bento-card xl">
+    <a class="bento-card xl" href="https://amarcone42.itch.io/sunfall-stories">
         <img src="assets/images/sunfallstories-cover.png" alt="Game cover">
         <div>
             <h3>Sunfall Stories</h3>
             <p>Game prototype developed during the Cyberpunk Game Jam 2024</p>
         </div>
-    </div>
+    </a>
 
-    <div class="bento-card xl">
+    <a class="bento-card xl" href="https://github.com/amarcone42/agora">
         <img src="assets/images/agora-hires-logo-white.png" alt="Agorà project icon">
         <div>
             <h3>Agorà</h3>
             <p>Human-machine interaction exam project</p>
         </div>
-    </div>
+    </a>
 
 
-    <div class="bento-card xl">
+    <a class="bento-card xl" href="https://github.com/Claudiabuono/Chemo">
         <img src="assets/images/chemo_icon.png" alt="Chemo project image">
         <div>
             <h3>Chemo</h3>
             <p>Software Engineering exam project</p>
         </div>
-    </div>
+    </a>
 
     
     
