--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -14,7 +14,9 @@ $border-radius-s:  12px !default;
 $text-color:       #F5F5F0 !default;
 $background-color: #111111 !default;
 $background-color-accent: lighten($background-color, 5%) !default;
+$background-color-hover: lighten($background-color, 8%) !default;
 $brand-color:      #BA372E !default;
+$brand-color-hover: lighten($brand-color, 5%) !default;
 
 $grey-color:       #999999 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
