--- a/_sass/bento.scss
+++ b/_sass/bento.scss
@@ -23,10 +23,16 @@
     display: flex;
     flex-direction: column;
 
+    color: $text-color;
     background-color: $background-color-accent;
     border-radius: $border-radius-s;
 
-    h2 {
+    text-decoration: none;
+    &:hover {
+      background-color: $background-color-hover;
+    }
+
+    h1,h2 {
       margin: 0;
     }
     h2,h3 {
@@ -69,11 +75,18 @@
     background-color: $brand-color;
     flex-basis: calc(($card-size + 60px)*3);
     flex-grow: 3;
-    img {
-      border-radius: 12px;
+
+    &:hover {
+      background-color: $brand-color-hover;
     }
-    h2 {
+
+    img {
+      border-radius: 100%;
+    }
+    h1,h2 {
       font-family: "Silkscreen", sans-serif;
+      font-weight: bold;
+      color: $background-color;
     }
     span {
       font-family: monospace;
