Added social links in the homepage Added social icons. Edited home-bento.html to add the links and bento.scss to style the changes.

--- a/_includes/home-bento.html
+++ b/_includes/home-bento.html
@@ -8,9 +8,23 @@
         </div>
     </div>
     
-    <div class="bento-card m">
-        <h3>Social link</h3>
-        <p>My main accounts</p>
+    <div class="bento-card social-card m">
+        <div class="social-row">
+            <a href="https://github.com/amarcone42">
+                <img class="social-icon" src="assets/images/github-icon.svg" alt="GitHub profile">
+            </a>
+            <a href="https://www.instagram.com/amarcone42">
+                <img class="social-icon" src="assets/images/instagram-icon.svg" alt="Instagram profile">
+            </a>
+        </div>
+        <div class="social-row">
+            <a href="https://x.com/amarcone42">
+                <img class="social-icon" src="assets/images/twitter-logo.svg" alt="Twitter profile">
+            </a>
+            <a href="https://bsky.app/profile/amarcone.it">
+                <img class="social-icon" src="assets/images/bluesky-logos.svg" alt="Bluesky profile">
+            </a>
+        </div>
     </div>
 
 
