Added email link to homepage

--- a/_includes/home-bento.html
+++ b/_includes/home-bento.html
@@ -1,12 +1,12 @@
 <div class="bento-grid">
-    <div class="bento-card xl main">
+    <a class="bento-card xl main" href="mailto:antonio.marcone@proton.me">
         <img src="assets/images/profile-icon.png" alt="Profile image">
         <div>
             <h1>Antonio Marcone</h1>
             <p><span class="title">@amarcone42</span></p>
-            <p>Developer, creative, student</p>
+            <p>Student, developer, creative</p>
         </div>
-    </div>
+    </a>
     
     <div class="bento-card social-card m">
         <div class="social-row">
@@ -66,19 +66,5 @@
             <p>Software Engineering exam project</p>
         </div>
     </a>
-
-    
-    
-
-    <!--
-    <div class="bento-card s">
-        <h3>Post: Tertiary</h3>
-    </div>
-    <div class="bento-card s">
-        <h3>Post: Tertiary</h3>
-    </div>
-    -->
-
-    
 
 </div>
