Fixed link style

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -114,15 +114,15 @@ a {
   }
 
   &:hover {
-    color: $text-color;
-    text-decoration: underline;
+    color: $brand-color-hover;
+    text-decoration: none;
   }
 
   .social-media-list &:hover {
     text-decoration: none;
 
     .username {
-      text-decoration: underline;
+      text-decoration: none;
     }
   }
 }
