Added main lists style Added a common style for main lists in minima.scss and layout.scss. Edited main lists in posts.html and works.html to adapt the content.

--- a/_includes/works.html
+++ b/_includes/works.html
@@ -1,11 +1,13 @@
 <section>
   <div class="work-container">
-    <ul class= "work-list">
+    <ul class= "main-list">
       {% assign work_pages = site.pages | where_exp: "page", "page.path contains 'works/'" %}
       {% for work in work_pages %}
         <li>
-          <h3><a class="work-link" href="{{ work.url }}">{{ work.title }}</a></h3>
-          <p>{{ work.description }}</p>
+          <a class="card" href="{{ work.url }}">
+            <h3 class="title">{{ work.title }}</h3>
+            <p>{{ work.description }}</p>
+          </a>
         </li>
       {% endfor %}
     </ul>
