--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -30,6 +30,10 @@ $card-size:        7rem;
 $card-gap:         14px;
 $card-padding:     14px;
 
+$small-radius:     6px;
+$inner-radius:     14px;
+$outer-radius:     18px;
+
 $on-palm:          600px !default;
 $on-laptop:        800px !default;
 
