--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -220,12 +220,54 @@
   @include relative-font-size(1.75);
 }
 
-.post-list {
+.main-list {
   margin-left: 0;
   list-style: none;
+  display: flex;
+  flex-direction: column;
 
   > li {
-    margin-bottom: $spacing-unit;
+    border-radius: $small-radius;
+
+    .card {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: $card-gap;
+      padding: $card-padding;
+  
+      border-radius: inherit;
+  
+      background-color: $background-color-accent;
+      &:hover {
+        background-color: $background-color-hover;
+      }
+      .date {
+        margin-bottom: 4px;
+      }
+      p {
+        color: $grey-color;
+      }
+      .title {
+        color: $text-color;
+
+        &:visited {
+          color: $text-color;
+        }
+        &:hover {
+          color: $text-color;
+        }
+      }
+    }
+    
+  }
+  
+  :first-child {
+    border-top-left-radius: $outer-radius;
+    border-top-right-radius: $outer-radius;
+  }
+  :last-child {
+    border-bottom-right-radius: $outer-radius;
+    border-bottom-left-radius: $outer-radius;
   }
 }
 
@@ -249,6 +291,7 @@
 
   > li {
     margin-bottom: $spacing-unit;
+    
   }
 }
 
