--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,18 +1,18 @@
 <section>
   <div class="post-container">
-    <ul class="post-list">
+    <ul class="main-list">
       {%- for post in site.posts -%}
       <li>
-        {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        <h3>
-          <a class="post-link" href="{{ post.url | relative_url }}">
+        <a class="card" href="{{ post.url | relative_url }}">
+          {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
+          <p class="date"><span class="post-meta">{{ post.date | date: date_format }}</span></p>
+          <h3 class="title">
             {{ post.title | escape }}
-          </a>
-        </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
+          </h3>
+          {%- if site.show_excerpts -%}
+            {{ post.excerpt }}
+          {%- endif -%}
+        </a>
       </li>
       {%- endfor -%}
     </ul>
