--- a/_sass/bento.scss
+++ b/_sass/bento.scss
@@ -25,7 +25,7 @@
 
     color: $text-color;
     background-color: $background-color-accent;
-    border-radius: $border-radius-s;
+    border-radius: $outer-radius;
 
     text-decoration: none;
     &:hover {
@@ -49,6 +49,7 @@
     img {
       margin-bottom: 0;
       margin-right: 12px;
+      border-radius: $inner-radius;
     }
   }
 
@@ -116,6 +117,7 @@
         margin: 0;
         height: 2.2em;
         opacity: 0.8;
+        border-radius: 0;
         transition: transform 100ms;
         color: $text-color;
       }
