--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -29,6 +29,9 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  h1,h2,h3,h4,h5,h6 {
+    font-family: $header-font-family;
+  }
 }
 
 
