Added responsive style to homepage Updated the scss files to have a responsive style. Minor changes to home-bento.html to adapt the style.

--- a/_includes/home-bento.html
+++ b/_includes/home-bento.html
@@ -1,5 +1,5 @@
 <div class="bento-grid">
-    <a class="bento-card xl main" href="mailto:antonio.marcone@proton.me">
+    <a class="bento-card main" href="mailto:antonio.marcone@proton.me">
         <img src="assets/images/profile-icon.png" alt="Profile image">
         <div>
             <h1>Antonio Marcone</h1>
@@ -8,7 +8,7 @@
         </div>
     </a>
     
-    <div class="bento-card social-card m">
+    <div class="bento-card social-card l">
         <div class="social-row">
             <a href="https://github.com/amarcone42">
                 <img class="social-icon" src="assets/images/github-icon.svg" alt="GitHub profile">
