--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -82,8 +82,7 @@
     position: absolute;
     top: 9px;
     right: math.div($spacing-unit,2);
-    background-color: $background-color;
-    border: 1px solid $grey-color-light;
+    background-color: $background-color-accent;
     border-radius: 5px;
     text-align: right;
 
