Added itch.io profile link Changed the social links in the homepage and in the about page

--- a/_includes/home-bento.html
+++ b/_includes/home-bento.html
@@ -13,8 +13,8 @@
             <a href="https://github.com/amarcone42">
                 <img class="social-icon" src="assets/images/github-icon.svg" alt="GitHub profile">
             </a>
-            <a href="https://www.instagram.com/amarcone42">
-                <img class="social-icon" src="assets/images/instagram-icon.svg" alt="Instagram profile">
+            <a href="https://amarcone42.itch.io">
+                <img class="social-icon" src="assets/images/itchio-logo.svg" alt="Itch.io profile">
             </a>
         </div>
         <div class="social-row">
