Added Agorà project info

--- a/_includes/home-bento.html
+++ b/_includes/home-bento.html
@@ -50,7 +50,7 @@
         </div>
     </a>
 
-    <a class="bento-card xl" href="https://github.com/amarcone42/agora">
+    <a class="bento-card xl" href="/works/Agorà.html">
         <img src="assets/images/agora-hires-logo-white.png" alt="Agorà project icon">
         <div>
             <h3>Agorà</h3>
