Restyled typeface Removed old serif font for titles from head.html and used the normal serif font with more weight. Added new font in head.html and used it for h1 tags and profile handle. Minor content and style changes.

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -31,6 +31,14 @@ body {
   flex-direction: column;
   h1,h2,h3,h4,h5,h6 {
     font-family: $header-font-family;
+    font-weight:$header-font-weight;
+  } 
+  h1 {
+    font-family: "Tiny5", sans-serif;
+  }
+  .title {
+    font-family: $header-font-family;
+    font-weight:$header-font-weight;
   }
 }
 
@@ -113,7 +121,7 @@ a {
   text-decoration: none;
 
   &:visited {
-    color: darken($brand-color, 15%);
+    color: $brand-color;
   }
 
   &:hover {
