--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,7 @@
                   {% assign state = 'active ' %}
               {% endif %}
                 <a
-                  class="page-link {{ state }}"
+                  class="title page-link {{ state }}"
                   href="{% if page.url == link.url %}{{ site.baseurl }}{% else %}{{ site.baseurl }}{{ link.url }}{% endif %}"
                   title="{{ link.title }}">
                     {{ link.text }}
