--- a/_sass/bento.scss
+++ b/_sass/bento.scss
@@ -73,9 +73,12 @@
       color: $background-color;
     }
     span {
-      font-family: monospace;
+      font-family: "Tiny5", sans-serif;
+      font-weight: 400;
+      font-size: 22px;
     }
     p {
+
       color: $text-color;
     }
   }
