--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -3,9 +3,10 @@
 // Define defaults for each variable.
 
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$header-font-family: "Merriweather", serif;
+$header-font-family: $base-font-family;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
+$header-font-weight: 600 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
@@ -19,7 +20,7 @@ $brand-color:      #BA372E !default;
 $brand-color-hover: lighten($brand-color, 5%) !default;
 
 $grey-color:       #999999 !default;
-$grey-color-light: lighten($grey-color, 40%) !default;
+$grey-color-light: lighten($grey-color, 30%) !default;
 $grey-color-dark:  darken($grey-color, 30%) !default;
 
 $table-text-align: left !default;
