Minor style changes

--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="work">
+<div class="work {{ page.type | escape }}">
 
   <header class="work-header">
     <h1 class="work-title">{{ page.title | escape }}</h1>
