Updated accent color Changed brand color and updated all related content.

--- a/_includes/home-bento.html
+++ b/_includes/home-bento.html
@@ -1,6 +1,6 @@
 <div class="bento-grid">
     <a class="bento-card main" href="mailto:antonio.marcone@proton.me">
-        <img src="assets/images/profile-icon.png" alt="Profile image">
+        <img src="assets/images/profile-icon-borderless.svg" alt="Profile image">
         <div>
             <h1>Antonio Marcone</h1>
             <p><span class="title">@amarcone42</span></p>
