--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -16,7 +16,7 @@ $text-color:       #F5F5F0 !default;
 $background-color: #111111 !default;
 $background-color-accent: lighten($background-color, 5%) !default;
 $background-color-hover: lighten($background-color, 8%) !default;
-$brand-color:      #BA372E !default;
+$brand-color:      #b31b1b !default;
 $brand-color-hover: lighten($brand-color, 5%) !default;
 
 $grey-color:       #999999 !default;
