--- a/_includes/works.html
+++ b/_includes/works.html
@@ -2,7 +2,8 @@
   <div class="work-container">
     <ul class= "main-list">
       {% assign work_pages = site.pages | where_exp: "page", "page.path contains 'works/'" %}
-      {% for work in work_pages %}
+      {% assign sorted_work_pages = work_pages | sort: 'date' | reverse %}
+      {% for work in sorted_work_pages %}
         <li>
           <a class="card" href="{{ work.url }}">
             <h3 class="title">{{ work.title }}</h3>
