Updated content in works section

--- a/_includes/home-bento.html
+++ b/_includes/home-bento.html
@@ -50,7 +50,7 @@
         </div>
     </a>
 
-    <a class="bento-card xl" href="/works/Agorà.html">
+    <a class="bento-card xl" href="/works/university-projects.html">
         <img src="assets/images/agora-hires-logo-white.png" alt="Agorà project icon">
         <div>
             <h3>Agorà</h3>
@@ -59,7 +59,7 @@
     </a>
 
 
-    <a class="bento-card xl" href="https://github.com/Claudiabuono/Chemo">
+    <a class="bento-card xl" href="/works/university-projects.html">
         <img src="assets/images/chemo_icon.png" alt="Chemo project image">
         <div>
             <h3>Chemo</h3>
