Fixed syntax higlighting Edited the style of syntax higlight to change the background colors.

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -166,9 +166,9 @@ blockquote {
 pre,
 code {
   @include relative-font-size(0.9375);
-  border: 1px solid $grey-color-light;
-  border-radius: 3px;
-  background-color: #eef;
+  border: 1px solid $grey-color-dark;
+  border-radius: $small-radius;
+  background-color: $background-color-accent;
 }
 
 code {
