--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -2,7 +2,7 @@
  * Syntax highlighting styles
  */
 .highlight {
-  background: #fff;
+  background: transparent;
   @extend %vertical-rhythm;
 
   .highlighter-rouge & {
