Minor style changes Added Poppins font for headings. Updated sunfall stories link in the homepage.

--- a/_includes/home-bento.html
+++ b/_includes/home-bento.html
@@ -42,7 +42,7 @@
         </div>
     </a>
 
-    <a class="bento-card xl" href="https://amarcone42.itch.io/sunfall-stories">
+    <a class="bento-card xl" href="/works/sunfall-stories.html">
         <img src="assets/images/sunfallstories-cover.png" alt="Game cover">
         <div>
             <h3>Sunfall Stories</h3>
