--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -31,8 +31,11 @@ body {
   flex-direction: column;
   
   .title {
-    font-family: $header-font-family;
-    font-weight:$header-font-weight;
+    font-family: $heading-font-family;
+    font-weight:$heading-font-weight;
+  }
+  p {
+    color: $grey-color-light;
   }
 }
 
@@ -102,15 +105,15 @@ li {
  * Headings
  */
 h1 {
-  font-family: "Tiny5", sans-serif;
+  font-family: $titles-font-family;
 }
 h2, h3, h4, h5, h6 {
-  font-family: $header-font-family;
-  font-weight:$header-font-weight;
+  font-family: $heading-font-family;
+  font-weight:$heading-font-weight;
 }
 .game {
   h2, h3, h4, h5, h6 {
-    font-family: "Tiny5", sans-serif;
+    font-family: $titles-font-family;
   }
 }
 
