--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -93,7 +93,7 @@
         }
 
         h1 {
-            font-family: "Silkscreen", sans-serif;
+            font-family: $brand-font-family;
             font-weight: bold;
             color: $background-color;
         }
