--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -3,10 +3,12 @@
 // Define defaults for each variable.
 
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$header-font-family: $base-font-family;
+$heading-font-family: "Poppins", $base-font-family;
+$brand-font-family: "Silkscreen", $base-font-family;
+$titles-font-family: "Tiny5", $base-font-family;
 $base-font-size:   16px !default;
 $base-font-weight: 400 !default;
-$header-font-weight: 600 !default;
+$heading-font-weight: 700 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
@@ -22,7 +24,7 @@ $brand-color:      #b31b1b !default;
 $brand-color-hover: lighten($brand-color, 5%) !default;
 
 $grey-color:       #999999 !default;
-$grey-color-light: lighten($grey-color, 30%) !default;
+$grey-color-light: lighten($grey-color, 25%) !default;
 $grey-color-dark:  darken($grey-color, 30%) !default;
 
 $table-text-align: left !default;
