--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -171,7 +171,7 @@ code {
   @include relative-font-size(0.9375);
   border: 1px solid $grey-color-dark;
   border-radius: $small-radius;
-  background-color: $background-color-accent;
+  background-color: $card-color;
 }
 
 code {
