--- a/_sass/bento.scss
+++ b/_sass/bento.scss
@@ -24,12 +24,12 @@
     flex-direction: column;
 
     color: $text-color;
-    background-color: $background-color-accent;
+    background-color: $card-color;
     border-radius: $outer-radius;
 
     text-decoration: none;
     &:hover {
-      background-color: $background-color-hover;
+      background-color: $card-color-hover;
     }
 
     h1,h2 {
@@ -90,7 +90,7 @@
     gap: 1.5em;
 
     &:hover {
-      background-color: $background-color-accent;
+      background-color: $card-color;
     }
 
     .social-row {
