--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -16,10 +16,10 @@ $spacing-unit:     30px !default;
 
 $text-color:       #F5F5F0 !default;
 $background-color: #111111 !default;
-$background-color-accent: lighten($background-color, 5%) !default;
-$background-color-hover: lighten($background-color, 8%) !default;
-$background-color-inner-card: lighten($background-color, 8%) !default;
-$background-color-inner-hover: lighten($background-color, 10%) !default;
+$card-color: lighten($background-color, 6%) !default;
+$card-color-hover: lighten($background-color, 10%) !default;
+$inner-card-color: lighten($card-color, 6%) !default;
+$inner-card-color-hover: lighten($card-color, 10%) !default;
 $brand-color:      #b31b1b !default;
 $brand-color-hover: lighten($brand-color, 5%) !default;
 
