--- a/_includes/home-bento.html
+++ b/_includes/home-bento.html
@@ -28,17 +28,17 @@
     </div>
 
 
-    <a class="bento-card m" href="/jekyll/update/2024/07/01/welcome-to-jekyll.html">
+    <a class="bento-card m" href="https://github.com/amarcone42/reviewit">
         <div>
-            <h3>Welcome to Jekyll!</h3>
-            <p>Read more...</p>
+            <h3>Reviewit</h3>
+            <p>Movies and tv series DB prototype for Database exam project</p>
         </div>
     </a>
 
-    <a class="bento-card m" href="/testing/2024/07/11/lorem-ipsum.html">
+    <a class="bento-card m" href="https://github.com/Bot-Ant/PetsWorld">
         <div>
-            <h3>Lorem Ipsum</h3>
-            <p>Read more...</p>
+            <h3>PetsWorld</h3>
+            <p>Pet products e-commerce for Web Development exam</p>
         </div>
     </a>
 
