--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,5 +1,12 @@
 <section>
   <div class="post-container">
+    {% if site.posts.size == 0 %}
+    <div class="empty">
+      <h2>Work in progress</h2>
+      <p><strong>No posts...yet</strong></p>
+      <p>Come back here in the future to read blog posts.</p>
+    </div>
+    {% else %}
     <ul class="main-list">
       {%- for post in site.posts -%}
       <li>
@@ -16,6 +23,6 @@
       </li>
       {%- endfor -%}
     </ul>
-
+    {% endif %}
   </div>
 </section>
