--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -32,6 +32,7 @@ $table-text-align: left !default;
 // Width of the content area
 $content-width:    800px !default;
 $card-size:        7rem;
+$card-size-mobile: 5rem;
 $card-gap:         10px;
 $card-padding:     16px;
 
